app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clicker-service
  namespace: app
  labels:
    app: clicker
spec:
  type: ClusterIP
  selector:
    app: clicker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
