app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clicker-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: app.kind.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clicker-service
                port:
                  number: 80
